# NodeGet

./: .gitignore  Cargo.toml  package-lock.json  package.json
docs/: index.md
server/: Cargo.toml  config.toml.example
server/migration/: Cargo.toml
server/migration/src/: lib.rs  m20260113_044428_create_static_monitoring.rs  m20260115_131325_create_dynamic_monitoring.rs  m20260131_112949_create_token.rs  m20260206_035808_create_crontab.rs  m20260206_040842_create_crontab_result.rs  m20260327_150739_create_js_worker.rs
server/src/: db_connection.rs  main.rs  monitoring_uuid_cache.rs  rpc_timing.rs  static_hash_cache.rs
server/src/crontab/: cache.rs  mod.rs  task.rs
server/src/db_connection/: mod.rs
server/src/db_connection/clean_up/: generic.rs  mod.rs  postgres.rs
server/src/entity/: dynamic_monitoring.rs  dynamic_monitoring_summary.rs  js_worker.rs  kv.rs  mod.rs  prelude.rs  static_monitoring.rs  token.rs
server/src/js_runtime/: inline_call.rs  mod.rs  nodeget.rs  runtime_pool.rs
server/src/kv/: mod.rs
server/src/logging/: mod.rs
server/src/rpc/: agent.rs  mod.rs  nodeget.rs
server/src/rpc/agent/: avg_utils.rs  delete_common.rs  delete_dynamic.rs  delete_dynamic_summary.rs  delete_static.rs  mod.rs  query.rs  query_dynamic.rs  query_dynamic_avg.rs  query_dynamic_multi_last.rs  query_dynamic_summary.rs  query_dynamic_summary_avg.rs  query_dynamic_summary_multi_last.rs  query_static.rs  query_static_avg.rs  query_static_multi_last.rs  report.rs  report_dynamic.rs  report_dynamic_summary.rs  report_static.rs
server/src/subcommands/: get_uuid.rs  mod.rs  roll_super_token.rs  serve.rs
server/src/terminal/: auth.rs  check_agent.rs  mod.rs
server/src/token/: generate_token.rs  get.rs  mod.rs  super_token.rs
(+155 files in other folders)
